# server/src/controllers/asset-media.controller.ts
@@ -1,35 +1,44 @@
 import {
   Body,
   Controller,
+  Get,
   HttpCode,
   HttpStatus,
   Inject,
+  Next,
   Param,
   ParseFilePipe,
   Post,
   Put,
+  Query,
   Res,
   UploadedFiles,
   UseInterceptors,
 } from '@nestjs/common';
 import { ApiConsumes, ApiTags } from '@nestjs/swagger';
-import { Response } from 'express';
+import { NextFunction, Response } from 'express';
 import { EndpointLifecycle } from 'src/decorators';
-import { AssetMediaResponseDto, AssetMediaStatusEnum } from 'src/dtos/asset-media-response.dto';
-import { AssetMediaReplaceDto, UploadFieldName } from 'src/dtos/asset-media.dto';
 import {
-  AssetBulkUploadCheckResponseDto, CheckExistingAssetsResponseDto
+  AssetBulkUploadCheckResponseDto,
+  AssetMediaResponseDto,
+  AssetMediaStatusEnum,
+  CheckExistingAssetsResponseDto,
 } from 'src/dtos/asset-media-response.dto';
 import {
   AssetBulkUploadCheckDto,
-  CheckExistingAssetsDto
+  AssetMediaReplaceDto,
+  CheckExistingAssetsDto,
+  GetAssetThumbnailDto,
+  UploadFieldName,
 } from 'src/dtos/asset-media.dto';
 import { AuthDto } from 'src/dtos/auth.dto';
 import { ILoggerRepository } from 'src/interfaces/logger.interface';
-import { Auth, Authenticated } from 'src/middleware/auth.guard';
+import { Auth, Authenticated, FileResponse } from 'src/middleware/auth.guard';
 import { FileUploadInterceptor, Route, UploadFiles, getFiles } from 'src/middleware/file-upload.interceptor';
 import { AssetMediaService } from 'src/services/asset-media.service';
+import { sendFile } from 'src/utils/file';
 import { FileNotEmptyValidator, UUIDParamDto } from 'src/validation';
+
 @ApiTags('Asset')
 @Controller(Route.ASSET)
 export class AssetMediaController {
@@ -62,10 +71,24 @@ export class AssetMediaController {
     return responseDto;
   }
 
+  @Get(':id/thumbnail')
+  @FileResponse()
+  @Authenticated({ sharedLink: true })
+  @EndpointLifecycle({ addedAt: 'v1.106.0' })
+  async getThumbnailBytes(
+    @Res() res: Response,
+    @Next() next: NextFunction,
+    @Auth() auth: AuthDto,
+    @Param() { id }: UUIDParamDto,
+    @Query() dto: GetAssetThumbnailDto,
+  ) {
+    await sendFile(res, next, () => this.service.getThumbnailBytes(auth, id, dto), this.logger);
+  }
+
   /**
    * Checks if multiple assets exist on the server and returns all existing - used by background backup
    */
-  @Post('/exist')
+  @Post('exist')
   @HttpCode(HttpStatus.OK)
   @Authenticated()
   checkExistingAssets(
@@ -78,7 +101,7 @@ export class AssetMediaController {
   /**
    * Checks if assets exist by checksums
    */
-  @Post('/bulk-upload-check')
+  @Post('bulk-upload-check')
   @HttpCode(HttpStatus.OK)
   @Authenticated()
   checkBulkUpload(
